Refactor xml export process (AdminServlet.java)