@@ -2,8 +2,8 @@ package ru.shanalotte.servlets;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -37,6 +37,9 @@ import ru.shanalotte.entities.Auction;
 import ru.shanalotte.entities.Category;
 import ru.shanalotte.entities.User;
 import ru.shanalotte.entities.UserBid;
+import ru.shanalotte.service.XmlReader;
+import ru.shanalotte.service.XmlService;
+import ru.shanalotte.service.XmlWriter;
 import ru.shanalotte.xmlentities.Bid;
 import ru.shanalotte.xmlentities.Bidder;
 import ru.shanalotte.xmlentities.Bids;
@@ -49,7 +52,7 @@ import ru.shanalotte.xmlentities.UserElem;
 @MultipartConfig
 public class AdminServlet extends HttpServlet {
   private static final long serialVersionUID = 1L;
-  private static final int usersPerPage = 20;
+  private static final int USERS_PER_PAGE = 20;
 
   @Autowired
   private UserDAO userDAO;
@@ -61,6 +64,12 @@ public class AdminServlet extends HttpServlet {
   private UserBidDAO userBidDAO;
   @Autowired
   private MessageManager messageManager;
+  @Autowired
+  private XmlService xmlService;
+  @Autowired
+  private XmlReader xmlReader;
+  @Autowired
+  private XmlWriter xmlWriter;
 
   @Override
   public void init(ServletConfig config) throws ServletException {
@@ -88,9 +97,9 @@ public class AdminServlet extends HttpServlet {
     int currentPage = determineCurrentPage(request, maxPages);
     List<User> userList;
     if (type.equals("all")) {
-      userList = userDAO.listUsersOfPage(currentPage, usersPerPage);
+      userList = userDAO.listUsersOfPage(currentPage, USERS_PER_PAGE);
     } else {
-      userList = userDAO.listUnactivatedUsersOfPage(currentPage, usersPerPage);
+      userList = userDAO.listUnactivatedUsersOfPage(currentPage, USERS_PER_PAGE);
     }
     request.setAttribute("currentPage", currentPage);
     request.setAttribute("totalPages", maxPages);
@@ -112,9 +121,9 @@ public class AdminServlet extends HttpServlet {
   private int determineMaxPagesAmountPerType(String type) {
     int maxPages;
     if (type.equals("all")) {
-      maxPages = (int) Math.ceil((float) userDAO.userCount() / usersPerPage);
+      maxPages = (int) Math.ceil((float) userDAO.userCount() / USERS_PER_PAGE);
     } else {
-      maxPages = (int) Math.ceil((float) userDAO.unactivatedUserCount() / usersPerPage);
+      maxPages = (int) Math.ceil((float) userDAO.unactivatedUserCount() / USERS_PER_PAGE);
     }
     return maxPages;
   }
@@ -200,129 +209,43 @@ public class AdminServlet extends HttpServlet {
     response.sendRedirect(urlWhereAdminWasBefore);
   }
 
-  //TODO
-  private void exportDataset(HttpServletResponse response) throws UnsupportedEncodingException, IOException {
-    JAXBContext jc = null;
-    Items items = null;
-    Marshaller marshaller = null;
+  private void exportDataset(HttpServletResponse response) throws IOException {
+    xmlService.createXmlMarshaller().ifPresentOrElse(
+        marshaller -> exportDataset(marshaller, response),
+        () -> showExportFailedMessage(response)
+    );
+  }
+
+  private void showExportFailedMessage(HttpServletResponse response) {
     try {
-      jc = JAXBContext.newInstance(Items.class);
-      marshaller = jc.createMarshaller();
-      marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, true);
-    } catch (JAXBException e) {
-      response.sendRedirect("Admin?message=" + URLEncoder.encode("Export failed.", "UTF-8"));
-      return;
+      response.sendRedirect("Admin?message=" + URLEncoder.encode("Export failed.", StandardCharsets.UTF_8));
+    } catch (IOException e) {
+      e.printStackTrace();
     }
+  }
 
-    // Populate xml entity classes.
-    // Bring all auctions from db.
-
+  private void exportDataset(Marshaller marshaller, HttpServletResponse response) {
     List<Auction> auctions = auctionDAO.list();
+    List<Item> xmlEntries = xmlWriter.auctionsToXml(auctions);
+    Items xmlData = new Items();
+    xmlData.setItems(xmlEntries);
+    sendXmlFileToUser(marshaller, response, xmlData);
+  }
 
-    List<Item> item_list = new ArrayList<>();
-    Item current;
-    LocationElem current_loc;
-    UserElem current_user;
-    Bids current_bids;
-    Bid current_bid;
-    List<Bid> current_bid_list;
-    Bidder current_bidder;
-    List<String> current_categories;
-    List<Category> categories_copy;
-    String prev_category = "";
-    int categories_number;
-
-    for (Auction a : auctions) {
-      current = new Item();
-      current.setName(a.getName());
-      current.setDescription(a.getDescription());
-      current.setCountry(a.getCountry());
-      current.setCurrently("$" + a.getCurrentBid());
-      current.setFirst_bid("$" + a.getStartingBid());
-      current.setNumber_of_bids(a.getNumOfBids());
-      if (a.getBuyPrice() != 0) {
-        current.setBuy_Price("$" + a.getBuyPrice());
-        ;
-      }
-
-      /* Location */
-      current_loc = new LocationElem();
-      current_loc.setLocation(a.getLocation());
-      current_loc.setLatitude(a.getLatitude());
-      current_loc.setLongitude(a.getLongitude());
-      ;
-      current.setLocation(current_loc);
-
-      /* Seller */
-      current_user = new UserElem();
-      current_user.setUserID(a.getCreator().getUserId());
-      current_user.setRating((int) a.getCreator().getSellRating());
-      current.setSeller(current_user);
-
-      /* Start/End Dates */
-      SimpleDateFormat sdf = new SimpleDateFormat("MMM-dd-yy HH:mm:ss", Locale.ENGLISH);
-      if (a.getStartTime() == null) {
-        current.setStarted("");
-      } else {
-        current.setStarted(sdf.format(a.getStartTime()));
-      }
-      current.setEnds(sdf.format(a.getExpirationTime()));
-
-      /* Categories */
-      current_categories = new ArrayList<String>();
-      categories_copy = new ArrayList<Category>(a.getCategories());
-      categories_number = categories_copy.size();
-      for (int i = 0; i < categories_number; i++) { // Sort them
-        for (Category auct_cat : categories_copy) {
-          if (auct_cat.getParent() == null ||
-              auct_cat.getParent().equals(prev_category)) {
-            current_categories.add(auct_cat.getName());
-            prev_category = auct_cat.getName();
-            categories_copy.remove(auct_cat);
-            break;
-          }
-        }
-      }
-      current.setCategories(current_categories);
-
-      /* Bids */
-      current_bid_list = new ArrayList<Bid>();
-      for (UserBid uba : a.getUserBidAuctions()) {
-        current_bidder = new Bidder();
-        current_bidder.setCountry(uba.getUser().getCountry());
-        current_bidder.setLocation(uba.getUser().getAddress());
-        current_bidder.setRating((int) uba.getUser().getBidRating());
-        current_bidder.setUserID(uba.getUser().getUserId());
-
-        current_bid = new Bid();
-        current_bid.setAmount("$" + uba.getId().getPrice());
-        current_bid.setTime(sdf.format(uba.getTime()));
-        current_bid.setBidder(current_bidder);
-        current_bid_list.add(current_bid);
-      }
-      current_bids = new Bids();
-      current_bids.setBids(current_bid_list);
-      current.setBids(current_bids);
-      item_list.add(current);
-    }
-    items = new Items();
-    items.setItems(item_list);
-
+  private void sendXmlFileToUser(Marshaller marshaller, HttpServletResponse response, Items items) {
     try {
       response.setContentType("text/plain");
       response.setHeader("Content-Disposition", "attachment;filename=itemsall.xml");
       marshaller.marshal(items, response.getOutputStream());
-
     } catch (JAXBException e) {
-      response.sendRedirect("Admin?message=" + URLEncoder.encode("Export failed.", "UTF-8"));
-      return;
+      showExportFailedMessage(response);
+    } catch (IOException e) {
+      e.printStackTrace();
     }
-
   }
 
-  //TODO
   private void loadDataset(HttpServletRequest request, HttpServletResponse response)
-      throws IOException, ServletException {
+      throws IOException {
     JAXBContext jc;
     Items items;
     try {
